--- a/_posts/2015-04-02-tapir.md
+++ b/_posts/2015-04-02-tapir.md
@@ -2,7 +2,7 @@
 layout: post
 shortnews: false
 title: Lessons learned from TAPIR(s)
-photo: 'https://c2.staticflickr.com/6/5510/11690414524_4a2d975825_b.jpg'
+photo: img/tapir.jpg
 ---
 
 Having just finished yet another iteration of the [TAPIR
@@ -12,11 +12,6 @@ harder and more interesting project than I anticipated but the photos
 of baby tapirs helped me get through it.
 
 ### 1. Replication protocols should be co-designed with the systems that use them, *not* applications.
-
-<div class="col-xs-4 pull-right">
-<img src="https://i.imgur.com/xJjwVhP.jpg" alt="Felix the tapir"
-      class="img-thumbnail">
-</div>
 
 Applications do not commonly use replication protocols directly today;
 instead, they are usually packaged into a fault-tolerant service or
@@ -55,11 +50,6 @@ because it does not know how to do so in a general-purpose way.
 
 ### 2. Paxos is too strict (and expensive) for a lot of systems.
 
-<div class="col-xs-4 pull-right">
-<img src="https://c2.staticflickr.com/6/5510/11690414524_4a2d975825_b.jpg" alt="Felix the tapir"
-      class="img-thumbnail">
-</div>
-
 Today, systems that want to provide strong guarantees use Paxos \[6\]
 (or, if you are hipper than me, RAFT [7]), and everyone else uses
 something cheaper.  Paxos enforces a strict serial ordering of
@@ -84,11 +74,6 @@ transactions with *no* ordering of operations.
 
 ### 3. We can still provide the same strong guarantees to applications without consistency!
 
-<div class="col-xs-4 pull-right">
-<img src="https://37.media.tumblr.com/2d3ef9090bd30d760d621dfca6512a65/tumblr_mojh9fi4Ef1qd479ro1_500.jpg" alt="Felix the tapir"
-      class="img-thumbnail">
-</div>
-
 At the core of the TAPIR project is a new replication protocol, which
 we call *inconsistent replication* or IR, that provides
 fault-tolerance but no consistency.  IR is well-designed to provide
@@ -112,11 +97,6 @@ requires a full history of operations that only strong consistency can
 achieve.
 
 ### 4. Good clock synchronization is available and we should use it.
-
-<div class="col-xs-4 pull-right">
-<img src="https://c1.staticflickr.com/1/6/76059463_2ec021caa9.jpg" alt="Felix the tapir"
-      class="img-thumbnail">
-</div>
 
 Without ordering in the replication layer, TAPIR needs another way to
 efficiently order transactions, so it uses loosely synchronized clocks
@@ -156,11 +136,6 @@ measured 100% of baby tapirs to be extremely cute.
 !--->
 
 ### Summary
-
-<div class="col-xs-4 pull-right">
-<img src="https://caveviews.blogs.com/.a/6a00d8341bffd953ef017d4295b0d2970c-pi" alt="Felix the tapir"
-      class="img-thumbnail">
-</div>
 
 We should design better replication protocols optimized for
 distributed systems, not applications. For a class of strong system
