move to mastodon

--- a/_posts/2024-03-27-msr.md
+++ b/_posts/2024-03-27-msr.md
@@ -15,6 +15,7 @@ great things about MSR, most of us get to write our own job
 description.  This musing is also not meant to speak for others, even
 the folks named in it; it is simply my own opinion, values and goals.
 
+### Overview of My Job
 Many folks have asked me in the past: *what is being an MSR researcher
 like?* It's an interesting question because, in some ways, it is much
 more nebulous than academia, but on the other hand, I report to a
@@ -49,7 +50,7 @@ each in more detail, but these are not so different from academic
 responsibilities in research, teaching and service (Funding is a whole
 other issue that could occupy its own post.)
 
-* Innovator 
+### My Job as an Innovator 
 
 This role is my most important and hardest. My role at MSR is first
 and foremost to produce ideas, which I see as reading trends,
@@ -93,7 +94,7 @@ research to become useful.  In the meantime, I entertain myself
 writing papers, building systems and trying to be useful to my product
 collaborators.
 
-* Educator
+### My Job as an Educator
 
 This role is the most fun. In contrast to faculty that teach tens or
 hundreds (or thousands?!?) of students each year, my role as a
@@ -117,31 +118,31 @@ what I do, and incredibly, these folks that have been working on these
 services for 10+ years actually listen to me.
 
 My current work on kernel-bypass operating systems is at least half
-hand-hold engineers as we go into a big scary world of nanosecond
+hand-holding engineers as we go into a big scary world of nanosecond
 latencies and weird hardware accelerators with four letter acronyms.
 They have a lot of experience, but much of what they are doing now is
-not going to work going forward to terabit NICs, so we spend a lot of
-time explaining new technologies and helping software engineers figure
-out how to get their services to leverage those technologies.  I
-usually call this part of my role consulting, which indicates that I
-am lending expertise but absolutely not taking responsibility for
-anything that I break.
+not going to work going forward to terabit networks, so we spend a lot
+of time explaining new technologies and helping software engineers
+figure out how to leverage those technologies for their services.  I
+usually call this part of my role "consulting", which indicates that I
+am telling them what to do but absolutely not taking responsibility
+for anything that I break.
 
-* Contributor
+### My Job as a Contributor
 
 The last part of my job is giving back to the research community that
 I grew up in. I spent much of the first few years post-PhD reviewing
 papers on PCs; by now, I have chaired quite a few PCs.  Microsoft
-supports our communities by paying me to do this because it benefits
-from the research output, and I do it because research is
-fundamentally a collaborative effort and that requires a healthy
-community of researchers exchanging ideas around the world. 
+supports our communities by paying me to do this work because it
+benefits from the research output, and I do it because research is
+fundamentally a collaborative effort that requires a healthy community
+of researchers exchanging ideas around the world.
 
 I've also worked on generally improving our community. I started the
 2019 petition to move both SOSP and OSDI to an annual cadence (with
 the strong support of my management chain). I started and got MSR to
 fund a survey and project to improve codes of conduct in our
-communities. Likewise, my management chain supported me in this by
+communities.  Likewise, my management chain supported me in this by
 providing most of the funding, but Microsoft also crucially provide my
 collaborators -- Demetris Cheatham and Emma Irwin -- that had previous
 experience with harassment in the open-source community and continue
@@ -151,11 +152,11 @@ I love to advise PhD students. I can often offer another point of view
 from their advisors, but much like the fun aunt, I don't have to make
 them do generals or write a thesis. I have also benefited immensely
 from the senior faculty that I've been able to co-advise with: Scott
-Shenker, Boon Thau, Phil Levis, Tom Anderson, Ronaldo Alves
-Ferreira. It's always inspiring to see how they think about problems,
-and I have no constraints on who I can work with so I try to
-collaborate with as many faculty as possible.  It is also just fun to
-work with friends, like Adam Belay, Simon Peter, Jialin Li. I can
+Shenker, Boon Thau Loo, Lorenzo Alvisi, Phil Levis, Matei Zaharia, Tom
+Anderson, Ronaldo Alves Ferreira. It's always inspiring to see how
+they think about problems, and I have no constraints on collaboration,
+so I try to work with as many people as possible.  It is also just fun
+to work with friends, like Adam Belay, Simon Peter, Jialin Li. I can
 always embarrass them by telling their grad students stories from grad
 school.  It was great to work with all of the folks on the Treehouse
 project where I was able to connect with faculty and students across 4
@@ -164,17 +165,17 @@ universities.
 Finally, I am incredibly proud of the high-quality open-source
 operating system that is now deployed at Microsoft.  Microsoft
 supporting open-source is still a recent novelty to me, but I would
-not be at MSR if I could not open-source my research.  I hope
+not be at MSR if I could not open source my research.  I hope
 Demikernel will be a research platform for universities that do not
 have to resources to develop and maintain a research OS.  Obviously,
 universities can produce high-quality operating systems, as Mothy
 Roscoe had demonstrated more than once, but I think it would be hard
 to build and maintain a research prototype like Demikernel without the
 resources and support of MSR.  I also enjoy working with and mentoring
-the large number of software engineers that have worked on Demikernel:
-Sujay Jayakar, Pedro Henrique Penna, Brian Zill, Anand Bonde.
+the large number of Demikernel software engineers: Sujay Jayakar,
+Pedro Henrique Penna, Brian Zill, Anand Bonde.
 
-* Conclusion 
+### Conclusion
 
 Wow, this really turned into a thesis acknowledgements section. It is
 nice to write about the wins and positive experiences of the last 6
