--- a/_posts/2024-03-27-msr.md
+++ b/_posts/2024-03-27-msr.md
@@ -66,7 +66,7 @@ a systems researcher, I want to build systems that people will use,
 and a large (possibly largest??) company like Microsoft inevitably
 cares about almost everything that matters (take with grain of salt).
 In fact, having some constraints makes deciding what research to do
-somewhat easer because I don't have to guess at whether I'm doing
+somewhat easier because I don't have to guess at whether I'm doing
 useful research or not; someone will tell me in a pretty direct way.
 
 I find interacting with software engineers to be really energizing, so
@@ -167,7 +167,7 @@ operating system that is now deployed at Microsoft.  Microsoft
 supporting open-source is still a recent novelty to me, but I would
 not be at MSR if I could not open source my research.  I hope
 Demikernel will be a research platform for universities that do not
-have to resources to develop and maintain a research OS.  Obviously,
+have the resources to develop and maintain a research OS.  Obviously,
 universities can produce high-quality operating systems, as Mothy
 Roscoe had demonstrated more than once, but I think it would be hard
 to build and maintain a research prototype like Demikernel without the
