--- a/_posts/2024-03-27-msr.md
+++ b/_posts/2024-03-27-msr.md
@@ -5,15 +5,16 @@ title: My Job as a Microsoft Researcher
 ---
 
 Recently, I spent some time reflecting on my 6 years at Microsoft
-Research. I have thank my management chain -- Shan Lu, Ed Nightingale,
-Desney Tan -- for triggering this analysis of how I view my job.  My
-previous management chain certainly spoke about their values and MSR
-culture, but I had not been at MSR for long enough to think about or
-understand what they were saying.  Certainly, my experience and goals
-do not encompass all researchers at MSR, that is one of the really
-great things about MSR, most of us get to write our own job
-description.  This musing is also not meant to speak for others, even
-the folks named in it; it is simply my own opinion, values and goals.
+Research. I have to thank my new management chain -- Shan Lu, Ed
+Nightingale, Desney Tan -- for triggering this analysis of how I view
+my job.  My previous management chain certainly spoke about their
+values and MSR culture, but I had not been at MSR for long enough to
+think about or understand what they were saying.  Certainly, my
+experience and goals do not encompass all researchers at MSR, that is
+one of the really great things about MSR, most of us get to write our
+own job description.  This musing is also not meant to speak for
+others, even the folks named in it; it is simply my own opinion,
+values and goals.
 
 ### Overview of My Job
 Many folks have asked me in the past: *what is being an MSR researcher
@@ -25,22 +26,22 @@ I spend my time on, whether it is writing papers, writing code,
 interacting with faculty, grad students or software engineers.  My job
 is not as fixed in terms of how I spend my day-to-day time, and success
 can be evaluated in a number of ways, compared to academia, where I
-feel the goal posts are much clearer.
+feel the goal posts are more fixed.
 
 As a result, in addition to defining my own research agenda, some days
 I feel that I also have to figure out what the heck I'm suppose to be
-doing in the first place.  As I told folks that have asked, when I
-showed up at MSR, they gave me an empty office and just said: do your
-thing!  It took me *months* to figure out exactly what my "thing" was.
-This statement is not a poor reflection of my org chart, I am so
-grateful to my manager at the time, Ricardo Bianchini, the rest of my
-management chain, (Donald Kossmann, Johannes Gehrke) and the fantastic
-members of the systems group and other groups who provided tons of
-advice, guidance and inspiration.  But I think most researchers find
-their own journey when they start at MSR, and this does take some time.
-The great thing is that no one will really expect you to be productive
-in a research sense for the first year or two out of your PhD, so this
-time is really fun -- but also scary -- because there are so many
+doing in the first place.  When I arrived at MSR, they gave me an
+empty office and just said: do your thing!  It took me *months* to
+figure out exactly what my "thing" was.  This statement is not a poor
+reflection of my org chart, I am so grateful to my manager at the
+time, Ricardo Bianchini, the rest of my management chain, (Donald
+Kossmann, Johannes Gehrke) and the fantastic members of the systems
+group and other groups who provided tons of advice, guidance and
+inspiration.  But I think most researchers find their own journey when
+they start at MSR, and this does take some time.  The great thing is
+that no one will really expect you to be productive in a research
+sense for the first year or two out of your PhD, so this time is
+really fun -- but also scary -- because there are so many
 possibilities, much like when first starting your PhD.
 
 Now that I have done this job for a while, I think I have a reasonably
@@ -50,7 +51,7 @@ each in more detail, but these are not so different from academic
 responsibilities in research, teaching and service (Funding is a whole
 other issue that could occupy its own post.)
 
-### My Job as an Innovator 
+### The Innovator
 
 This role is my most important and hardest. My role at MSR is first
 and foremost to produce ideas, which I see as reading trends,
@@ -94,7 +95,7 @@ research to become useful.  In the meantime, I entertain myself
 writing papers, building systems and trying to be useful to my product
 collaborators.
 
-### My Job as an Educator
+### The Educator
 
 This role is the most fun. In contrast to faculty that teach tens or
 hundreds (or thousands?!?) of students each year, my role as a
@@ -125,10 +126,10 @@ not going to work going forward to terabit networks, so we spend a lot
 of time explaining new technologies and helping software engineers
 figure out how to leverage those technologies for their services.  I
 usually call this part of my role "consulting", which indicates that I
-am telling them what to do but absolutely not taking responsibility
-for anything that I break.
+get to tell them what to do without taking responsibility for anything
+that I break.
 
-### My Job as a Contributor
+### The Contributor
 
 The last part of my job is giving back to the research community that
 I grew up in. I spent much of the first few years post-PhD reviewing
@@ -160,7 +161,7 @@ to work with friends, like Adam Belay, Simon Peter, Jialin Li. I can
 always embarrass them by telling their grad students stories from grad
 school.  It was great to work with all of the folks on the Treehouse
 project where I was able to connect with faculty and students across 4
-universities.
+universities, so thanks to Adam for dragging me into that.
 
 Finally, I am incredibly proud of the high-quality open-source
 operating system that is now deployed at Microsoft.  Microsoft
@@ -177,7 +178,7 @@ Pedro Henrique Penna, Brian Zill, Anand Bonde.
 
 ### Conclusion
 
-Wow, this really turned into a thesis acknowledgements section. It is
+Wow, this really turned into a thesis acknowledgments section. It is
 nice to write about the wins and positive experiences of the last 6
 years; there were plenty of negative experiences, which I will save
 for another time (or drinks with my friends that are always there for
