--- a/_posts/2024-07-07-misogyny.md
+++ b/_posts/2024-07-07-misogyny.md
@@ -9,7 +9,7 @@ coincidentally, with some of the worst harassment of my life. It made
 me reflect on how my career has been defined as much in terms of
 misogyny as technical excellence (I've garnered quite a CV in both),
 and how I have struggled to explain to others my experience.  This
-blog post builds on previous work, like Katheryn McKineley's seminal
+blog post builds on previous work, like Katheryn McKinley's seminal
 post[[1]](https://www.sigarch.org/what-happens-to-us-does-not-happen-to-most-of-you/)
 and on Kate Manne's books [Down
 Girl](http://www.katemanne.net/down-girl.html)[2] and
