--- a/_posts/2024-07-24-misogyny.md
+++ b/_posts/2024-07-24-misogyny.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 shortnews: false
-title: The Moral Implications of Being a Moderately Successful
-Computer Scientist as a Woman
+title: The Moral Implications of Being a Moderately Successful Computer Scientist and a Woman
 ---
 
 I recently reached a few high points in my career that coincided, not
@@ -11,10 +10,11 @@ me reflect on how my career has been defined as much in terms of
 misogyny as technical excellence (I've garnered quite a CV in both),
 and how I have struggled to explain to others my experience.  This
 blog post builds on previous work, like [Kathryn McKinley's seminal
-post](https://www.sigarch.org/what-happens-to-us-does-not-happen-to-most-of-you/)[1]
+post](https://www.sigarch.org/what-happens-to-us-does-not-happen-to-most-of-you/)
+[1]
 and on Kate Manne's books [Down
-Girl](http://www.katemanne.net/down-girl.html)[2] and
-[Entitled](http://www.katemanne.net/entitled.html)[3], which frame
+Girl](http://www.katemanne.net/down-girl.html) [2] and
+[Entitled](http://www.katemanne.net/entitled.html) [3], which frame
 misogyny through the lens of moral philosophy.
 
 Kate defines misogyny as the enforcement branch of the patriarchy.
@@ -115,7 +115,7 @@ The view that women can't be experts is so strongly held that it causes
 some men to repeatedly harass the person attempting to teach them the 
 things that they need to succeed.
 
-## Moral Fallacy #3: Woman != Bad Feelings
+## Moral Fallacy #3: Woman == Good Feelings
 
 Now that I have managed to make men feel embarrassed and insecure,
 they blame these feelings on me. No one else has made them feel this
@@ -123,7 +123,8 @@ way before, and because men are famously good at emotional
 self-regulation, *I* must be the problem.  Indeed, one of the things
 that women are responsible for in our patriarchical society is
 [managing men's
-emotions](https://medium.com/fearless-she-wrote/i-am-not-responsible-for-the-anger-of-men-eabf35161886)[4].
+emotions](https://medium.com/fearless-she-wrote/i-am-not-responsible-for-the-anger-of-men-eabf35161886)
+[4].
 
 While men *claim* to be unemotionally seeking scientific truth in
 research, I have never seen a woman so personally invested and
@@ -219,9 +220,10 @@ not needed because we "trust" everyone), the default is simply to
 reinforce the patriarchy.
 
 Men, do better! If you are in a position of power and want to be an
-ally, educate yourself by reading Entitled[3] and doing [training on
+ally, educate yourself by reading Entitled [3] and doing [training on
 inclusive
-governance](https://github.com/microsoft/OSPO/tree/main/learning_resources/2022-code-of-conduct-workshop)[5].
+governance](https://github.com/microsoft/OSPO/tree/main/learning_resources/2022-code-of-conduct-workshop)
+[5].
 Even if you think you are a nice guy, there are plenty of other guys
 out there that are not so nice and dealing with the aftermath is much
 worse than preventing the harassment in the first place.
@@ -241,3 +243,8 @@ worse than preventing the harassment in the first place.
 5. [Inclusive Governance: Codes of Conduct
    Workshop](https://github.com/microsoft/OSPO/tree/main/learning_resources/2022-code-of-conduct-workshop). Emma
    Irwin. 2022.
+
+## Acknowledgments
+
+I'd like to thank the women of the UW Syslab for their feedback, Simon
+Peter and Dan Ports.
